# pysealer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml
examples/: fibonacci.py  math_operations.py  text_processing.py
src/: cli.rs  crypto.rs  decorator.rs  lib.rs  parser.rs
src/python/pyseal/: __init__.py
src/python/pysealer/: __init__.py  add_decorators.py  check_decorators.py  cli.py  git_diff.py  git_pre_commit.py  github_secrets.py  remove_decorators.py  setup.py
src/python/vurze/: __init__.py  add_decorators.py  cli.py  dummy_decorators.py  setup.py
src/rust/: crypto.rs  lib.rs  parser.rs
tests/: conftest.py  test_add_decorators.py  test_check.py  test_check_decorators.py  test_cli.py  test_decorate.py  test_dummy_decorators.py  test_git_diff.py  test_git_pre_commit.py  test_github_secrets.py  test_init_env.py  test_remove_decorators.py  test_setup.py
vurze/: cli.py
