[package]
name = "vurze"
version = "0.1.0"
edition = "2021"
description = "Version control your Python functions and classes with automated cryptographic decorator injection."
license = "MIT"
repository = "https://github.com/MCP-Security-Research/vurze"
keywords = ["rust", "python", "decorator", "version-control", "cryptography"]

# Rust-Python Bindings Library
[lib]
name = "_vurze"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

# General Project Dependencies
[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
